force-app/main/default/objects/Case_Status_Change__e/Case_Status_Change__e.object-meta.xml
<CustomObject>
    <label>Case Status Change</label>
    <pluralLabel>Cases Status Change</pluralLabel>
</CustomObject>