force-app/main/default/objects/Case_Status_Change__e/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <label>Case_Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>