force-app/main/default/objects/Case_Status_Change__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>